# -smart-data-openenv

./: README.md  app.py  easy.csv  environment.py  graders.py  hard.csv  inference.py  medium.csv  models.py  openenv.yaml  openenv_patch.py  pyproject.toml  requirements.txt  tasks.py
data/: easy.csv  hard.csv  medium.csv
env/: _init_.py  environment.py  tasks.py
server/: app.py
