[project]
name = "smart-data-openenv"
version = "0.1.0"
description = "AI-powered smart data cleaning environment"
authors = [{ name = "Anusha,Purandhareswari" }]

dependencies = [
    "pandas",
    "fastapi",
    "uvicorn",
    "pydantic",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
